<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bluetooth_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.magicmirror.BluetoothInfoActivity">


    <TextView
        android:text="@string/bluetooth_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView"
        android:layout_alignParentEnd="true"
        android:textAppearance="@android:style/TextAppearance.Material.Title" />

    <Button
        android:text="@string/button_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/connect"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:onClick="connectBluetoothLE"/>

    <TextView
        android:text="@string/bluetooth_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_below="@+id/connect"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name_val"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignStart="@+id/address_val" />

    <TextView
        android:text="@string/bluetooth_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/bluetooth_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView10"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/address_val"
        android:layout_alignBottom="@+id/textView10"
        android:layout_toEndOf="@+id/textView10"
        android:layout_marginStart="52dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView9"
        android:layout_toStartOf="@+id/connect"
        android:id="@+id/status" />

</RelativeLayout>
